more work on mashalling

--- a/errai-ioc/pom.xml
+++ b/errai-ioc/pom.xml
@@ -56,9 +56,8 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <version>1.0-SP4</version>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
-
 
         <dependency>
             <groupId>com.google.gwt</groupId>
